--- a/index.html
+++ b/index.html
@@ -1,2 +1,30 @@
-<img src="Panette_IndividualAssets_Logo.png" alt="Panette LLC Logo" />
+<style>
+  body {
+    margin: 0;
+    padding: 0;
+    font-family: Arial, sans-serif;
+    background: #ffffff;
+    display: flex;
+    justify-content: center;
+  }
+
+  .container {
+    max-width: 600px; /* Adjust this number to “crop” tighter or wider */
+    padding: 40px 20px;
+    text-align: center;
+  }
+
+  img {
+    max-width: 200px; /* Controls logo size */
+    height: auto;
+    margin-bottom: 20px;
+  }
+</style>
+
+<div class="container">
+  <img src="logo.png" alt="Panette LLC Logo">
+  <h1>Panette LLC</h1>
+  <p>Foodservice Supply Chain & Strategic Consulting</p>
+</div>
+
 
